Fix shift into margin for root element

--- a/war/SensorMLEditor.css
+++ b/war/SensorMLEditor.css
@@ -719,7 +719,7 @@ input:focus {
 	cursor:pointer;
 }
 
-.rng-disclosure {
+.rng-shift-remove {
 	margin-left:-25px;
 }
 
